force-app/main/default/objects/Case/fields/Asset_Version__c.field-meta.xml
<CustomField>
    <fullName>Asset_Version__c</fullName>
    <label>Asset Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>