force-app/main/default/objects/Case/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <description>Case Reason field used only for GSS ANZ</description>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party License</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>AMM</fullName>
            </value>
            <value>
                <fullName>Animals</fullName>
            </value>
            <value>
                <fullName>Appointment Book</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Background Tasks</fullName>
            </value>
            <value>
                <fullName>Backups</fullName>
            </value>
            <value>
                <fullName>Boarding</fullName>
            </value>
            <value>
                <fullName>Boarding Scheduler</fullName>
            </value>
            <value>
                <fullName>Bundles</fullName>
            </value>
            <value>
                <fullName>Care Plans</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Client Screen</fullName>
            </value>
            <value>
                <fullName>Clipboards</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Connectivity</fullName>
            </value>
            <value>
                <fullName>Covetrus Hardware</fullName>
            </value>
            <value>
                <fullName>Cubex</fullName>
            </value>
            <value>
                <fullName>Data Access Module</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>Data Transfer</fullName>
            </value>
            <value>
                <fullName>Data Wizards</fullName>
            </value>
            <value>
                <fullName>Device Issue</fullName>
            </value>
            <value>
                <fullName>Diary</fullName>
            </value>
            <value>
                <fullName>Document Integration</fullName>
            </value>
            <value>
                <fullName>Documents</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>EFTPOS</fullName>
            </value>
            <value>
                <fullName>Emails</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>