force-app/main/default/objects/Case/fields/DomainURL__c.field-meta.xml
<CustomField>
    <fullName>DomainURL__c</fullName>
    <formula>$Label.DomainURL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DomainURL</label>
    <type>Text</type>
</CustomField>