force-app/main/default/objects/Case/fields/End_System__c.field-meta.xml
<CustomField>
    <fullName>End_System__c</fullName>
    <label>End System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>