force-app/main/default/objects/Case/fields/First_Contact_Resolved__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Contact Resolved</label>
    <type>Checkbox</type>
</CustomField>