force-app/main/default/objects/Case/fields/First_Day_Resolved__c.field-meta.xml
<CustomField>
    <fullName>First_Day_Resolved__c</fullName>
    <formula>DATEVALUE(CreatedDate ) = DATEVALUE(ClosedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Day Resolved</label>
    <type>Checkbox</type>
</CustomField>