force-app/main/default/objects/Case/fields/GSS_Migration_Conversion_Key__c.field-meta.xml
<CustomField>
    <fullName>GSS_Migration_Conversion_Key__c</fullName>
    <label>GSS Migration Conversion Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>