force-app/main/default/objects/Case/fields/Issue_Related_To__c.field-meta.xml
<CustomField>
    <fullName>Issue_Related_To__c</fullName>
    <description>Used for Web Chat to route the chat session to the correct chat button/queue</description>
    <label>Issue Related To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AVIMark</fullName>
            </value>
            <value>
                <fullName>eVet Practice</fullName>
            </value>
            <value>
                <fullName>ImproMed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>