force-app/main/default/objects/Case/fields/Legacy_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Queue_Name__c</fullName>
    <description>Represents the name of the queue that the case belonged to when it existed in the legacy CRM system.</description>
    <inlineHelpText>Represents the name of the queue that the case belonged to when it existed in the legacy CRM system.</inlineHelpText>
    <label>Legacy Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>