force-app/main/default/objects/Case/fields/LOB_Account__c.field-meta.xml
<CustomField>
    <fullName>LOB_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOB Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Line_Of_Business_Account__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Line_Of_Business_Account__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>