force-app/main/default/objects/Case/fields/Notify_User__c.field-meta.xml
<CustomField>
    <fullName>Notify_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify User</label>
    <type>Checkbox</type>
</CustomField>