force-app/main/default/objects/Case/fields/Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason__c</fullName>
    <description>To fill out explanation if &quot;Other&quot; is selected in Reason.</description>
    <label>Other Reason</label>
    <type>TextArea</type>
</CustomField>