force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advantage</fullName>
            </value>
            <value>
                <fullName>AVIMark</fullName>
            </value>
            <value>
                <fullName>DVM Manager</fullName>
            </value>
            <value>
                <fullName>eVetPractice</fullName>
            </value>
            <value>
                <fullName>ImproMed</fullName>
            </value>
            <value>
                <fullName>Rapport</fullName>
            </value>
            <value>
                <fullName>RxWorks</fullName>
            </value>
            <value>
                <fullName>Vetstreet</fullName>
            </value>
            <value>
                <fullName>VisionVPM</fullName>
            </value>
            <value>
                <fullName>VivaVPM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>