force-app/main/default/objects/Case/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Case Reason field used only for Customer Operations (ANZ)</description>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Back Order</fullName>
            </value>
            <value>
                <fullName>Batch enquiry</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Corporate Brand</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Damage</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Mis ship</fullName>
            </value>
            <value>
                <fullName>New Provet Account</fullName>
            </value>
            <value>
                <fullName>New Provet Connect Account</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Product Availability</fullName>
            </value>
            <value>
                <fullName>Product information</fullName>
            </value>
            <value>
                <fullName>Product Picture / Image</fullName>
            </value>
            <value>
                <fullName>Product Repair</fullName>
            </value>
            <value>
                <fullName>Provet Plus Redemption</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Sales Question</fullName>
            </value>
            <value>
                <fullName>Short ship</fullName>
            </value>
            <value>
                <fullName>Track Order</fullName>
            </value>
            <value>
                <fullName>Trans &amp; Logistics</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>