force-app/main/default/objects/Case/fields/Send_Stella_Connect_Request__c.field-meta.xml
<CustomField>
    <fullName>Send_Stella_Connect_Request__c</fullName>
    <description>used with the Stella package to mark when the object is prepared to be read by the Stella package to create a request</description>
    <label>Send Stella Connect Request</label>
    <type>DateTime</type>
</CustomField>