force-app/main/default/objects/Case/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Catastrophic Failure</fullName>
            </value>
            <value>
                <fullName>2 - Major Failure</fullName>
            </value>
            <value>
                <fullName>3 - Minor Failure</fullName>
            </value>
            <value>
                <fullName>4 - General/Training</fullName>
                <default>true</default>
                <label>4 - General/Training</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>