force-app/main/default/objects/Case/fields/Severity_Set_Time__c.field-meta.xml
<CustomField>
    <fullName>Severity_Set_Time__c</fullName>
    <label>Severity Set Time</label>
    <type>DateTime</type>
</CustomField>