force-app/main/default/objects/Case/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <label>SKU</label>
    <length>50</length>
    <type>Text</type>
</CustomField>