force-app/main/default/objects/Case/fields/SLA_Not_Met__c.field-meta.xml
<CustomField>
    <fullName>SLA_Not_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA Not Met</label>
    <type>Checkbox</type>
</CustomField>