force-app/main/default/objects/Case/fields/Stella_Do_Not_Send__c.field-meta.xml
<CustomField>
    <fullName>Stella_Do_Not_Send__c</fullName>
    <formula>IF(OR(
				BEGINS(OwnerId ,&quot;00G&quot;) ,
				ISBLANK( ContactId ),
				ISBLANK( Contact.Email )
				),
				TRUE,FALSE)</formula>
    <label>Stella Do Not Send</label>
    <type>Checkbox</type>
</CustomField>