force-app/main/default/objects/Case/fields/Stella_Region__c.field-meta.xml
<CustomField>
    <fullName>Stella_Region__c</fullName>
    <label>Stella Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GSS APAC</fullName>
            </value>
            <value>
                <fullName>GSS EMEA</fullName>
            </value>
            <value>
                <fullName>GSS US</fullName>
                <label>GSS NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>