force-app/main/default/objects/Case/fields/TestTime__c.field-meta.xml
<CustomField>
    <fullName>TestTime__c</fullName>
    <formula>Severity_Set_Time__c +(5/24/60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestTime</label>
    <type>DateTime</type>
</CustomField>