force-app/main/default/objects/Case/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>002 - Queensland</fullName>
            </value>
            <value>
                <fullName>003 - North Queensland</fullName>
            </value>
            <value>
                <fullName>004 - NSW</fullName>
            </value>
            <value>
                <fullName>008 - Victoria</fullName>
            </value>
            <value>
                <fullName>009 - SA</fullName>
            </value>
            <value>
                <fullName>010 - WA</fullName>
            </value>
            <value>
                <fullName>011 - NZ - Auckland</fullName>
            </value>
            <value>
                <fullName>012 - NZ - Palmerston North</fullName>
            </value>
            <value>
                <fullName>013 - Christchurch</fullName>
            </value>
            <value>
                <fullName>019 - Provet Tasmania</fullName>
            </value>
            <value>
                <fullName>011 - Auckland</fullName>
                <isActive>false</isActive>
                <label>011 - Auckland</label>
            </value>
            <value>
                <fullName>012 - Palmerston North</fullName>
                <isActive>false</isActive>
                <label>012 - Palmerston North</label>
            </value>
            <value>
                <fullName>018 -NT</fullName>
                <isActive>false</isActive>
                <label>018 -NT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>