force-app/main/default/objects/Case/fields/X10_mints__c.field-meta.xml
<CustomField>
    <fullName>X10_mints__c</fullName>
    <formula>Severity_Set_Time__c + (10/24/60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>10 mints</label>
    <type>DateTime</type>
</CustomField>