force-app/main/default/objects/Case/fields/X13_mints__c.field-meta.xml
<CustomField>
    <fullName>X13_mints__c</fullName>
    <formula>Severity_Set_Time__c + (13/24/60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>13 mints</label>
    <type>DateTime</type>
</CustomField>