force-app/main/default/objects/Case/fields/X30_mints_After_Severity__c.field-meta.xml
<CustomField>
    <fullName>X30_mints_After_Severity__c</fullName>
    <formula>Severity_Set_Time__c + (90/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>30 mints After Severity</label>
    <type>DateTime</type>
</CustomField>