force-app/main/default/objects/Case/recordTypes/Boomi_Support_Case.recordType-meta.xml
<RecordType>
    <fullName>Boomi_Support_Case</fullName>
    <active>true</active>
    <businessProcess>Covetrus Support</businessProcess>
    <label>Boomi Support Case</label>
</RecordType>