force-app/main/default/objects/Case/recordTypes/Customer_Operations.recordType-meta.xml
<RecordType>
    <fullName>Customer_Operations</fullName>
    <active>true</active>
    <businessProcess>Customer Operations</businessProcess>
    <label>Customer Operations</label>
</RecordType>