force-app/main/default/objects/Case/recordTypes/Support_Case.recordType-meta.xml
<RecordType>
    <fullName>Support_Case</fullName>
    <active>true</active>
    <businessProcess>Covetrus Support</businessProcess>
    <label>Technology Support - ANZ/UK</label>
</RecordType>