force-app/main/default/objects/Case/recordTypes/Technology_Support_NA.recordType-meta.xml
<RecordType>
    <fullName>Technology_Support_NA</fullName>
    <active>true</active>
    <businessProcess>Covetrus Support</businessProcess>
    <label>Technology Support - NA</label>
</RecordType>