force-app/main/default/objects/Case/validationRules/Case_Origin_Email_Web.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Origin_Email_Web</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
OR(
ISPICKVAL(Origin,&quot;Email&quot;),
ISPICKVAL(Origin, &quot;Web&quot;)  
),
ISBLANK(SuppliedEmail)  
)</errorConditionFormula>
    <errorMessage>If you choose a Case Origin of &quot;Web&quot; or &quot;Email&quot;, you must enter a Web Email Address</errorMessage>
</ValidationRule>