force-app/main/default/objects/Case/validationRules/Not_allowed_to_create_CO_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_allowed_to_create_CO_Case</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp; CONTAINS($Profile.Name, &#39;GSS&#39;) &amp;&amp; $RecordType.Name=&#39;Customer Operations&#39;</errorConditionFormula>
    <errorMessage>You are not allowed to create a Customer Operations Case</errorMessage>
</ValidationRule>