force-app/main/default/objects/Case/validationRules/Subject_and_Description_Required_Before.validationRule-meta.xml
<ValidationRule>
    <fullName>Subject_and_Description_Required_Before</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
ISPICKVAL(Status,&#39;Closed&#39; ), 
OR (
ISBLANK( Subject)),
ISBLANK(Description)
)</errorConditionFormula>
    <errorMessage>Please provide a subject and description for this case before closing</errorMessage>
</ValidationRule>