force-app/main/default/objects/Case/listViews/ALL_APAC_RxWorks.listView-meta.xml
<ListView>
    <fullName>ALL_APAC_RxWorks</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>aaron,dean,slade,barbara,stevie,gary,nic,robert,ashley</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,In Progress,Pending Customer Response,Pending 3rd Party Action,Pending Internal Review,On Hold</value>
    </filters>
    <label>ALL APAC RxWorks</label>
</ListView>