force-app/main/default/objects/Case/listViews/All_VisionVPM_and_VivaVPM_not_Closed.listView-meta.xml
<ListView>
    <fullName>All_VisionVPM_and_VivaVPM_not_Closed</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Product__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>VisionVPM,VivaVPM</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,In Progress,Pending Customer Response,Pending 3rd Party Action,Pending Development,Pending Internal Review,On Hold</value>
    </filters>
    <label>All VisionVPM and VivaVPM not Closed</label>
    <sharedTo>
        <group>VisionVPM_Implementation</group>
    </sharedTo>
</ListView>