force-app/main/default/objects/Case/listViews/Alvar_s_Open_Cases.listView-meta.xml
<ListView>
    <fullName>Alvar_s_Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Alvar</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,In Progress,Pending Customer Response,Pending 3rd Party Action,Pending Development,Pending Internal Review,On Hold</value>
    </filters>
    <label>Alvar&#39;s Open Cases</label>
</ListView>