force-app/main/default/objects/Case/listViews/AVImark_Unassigned_Case.listView-meta.xml
<ListView>
    <fullName>AVImark_Unassigned_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Product__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Queue</filterScope>
    <label>AVImark Unassigned</label>
    <queue>AVImark_Unassigned</queue>
    <sharedTo>
        <group>AVImark_Unassigned</group>
        <role>GSS_NA_Admin</role>
        <role>NA_Leader</role>
        <roleAndSubordinates>GSS_NA_Support_Leader</roleAndSubordinates>
    </sharedTo>
</ListView>