force-app/main/default/objects/Case/listViews/Boomi_Support_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Boomi_Support_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Boomi Support Queue</label>
    <queue>Boomi_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>